# CitySense-csi2371-Arikan-Au-Zuberi

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build-mingw/: CMakeCache.txt
data/: air.csv  config.json  noise.csv  traffic.csv
src/app/: Cli.hpp  Config.hpp  main.cpp
src/core/: Aggregator.hpp  Detector.hpp  Window.hpp
src/detectors/: AirAlert.hpp  NoiseSpike.hpp  TrafficCongestion.hpp
src/export/: ConsolePrinter.hpp  JsonExporter.hpp
src/io/: ReaderCSV.hpp
src/model/: SensorRecord.hpp  SensorView.hpp
src/sim/: Checkpoint.hpp  Clock.hpp  Replayer.hpp
tests/: CMakeLists.txt  test_aggregation.cpp  test_api_shapes.cpp  test_build.cpp  test_detectors.cpp
tests_strict/: test_csv_contract.cpp  test_exceptions.cpp  test_parallel.cpp  test_windowing.cpp
